[package]
name = "chunking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
sha3 = "0.10"

[profile.release-with-info]
inherits = "release"
debug = true
