[package]
name = "cdc-chunkers"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Piletskii-Oleg/rust-chunking"
description = "A collection of Content Defined Chunking algorithms"
categories = ["algorithms"]
keywords = ["deduplication", "chunking", "cdc"]
default-run = "filetest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
rand = "0.8"
rand_distr = "0.4"
sha3 = "0.10"

[profile.release-with-info]
inherits = "release"
debug = true

[features]
cli = ["clap"]

[[bin]]
name = "filetest"
required-features = ["cli"]

